# Rforce

./: .Rbuildignore  .Rprofile  .gitignore  .lintr  404.html  CMakeLists.txt  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  README.Rmd  README.md  TODO  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: pkgdown.yaml
R/: api.R  censor.R  compo_sim.R  cpiu.R  step1_cpiu.R  step2_dummy.R  step3_Rforce.R  surv_sim.R  temp.R  utils.R  wcompo_kim.R
articles/: get-started.html  get-started.md  index.html  index.md  introduction-to-Rforce.html  introduction-to-Rforce.md
data/: testNA.csv  test_data.rds
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/articles/: get-started.html  index.html  introduction-to-Rforce.html
docs/reference/: Rforce.html  Y_hat_numerical_form.html  add_Y_hat.html  add_wrss.html  add_wt.html  admin_censoring.html  break_length_by_interval.html  compo_sim.html  compo_sim_mao.html  counts_by_interval_and_id.html  cpius_to_dummy.html  empirical_Y.html  index.html  km_fit.html  loadRforce.html  observed_risk_time.html  patients_to_cpius.html  predict.Rforce.html  printTree.html  pseudo_risk_time.html  random_censoring.html  saveRforce.html  surv_sim.html  true_Y.html  true_Y_numerical_form.html  validate.CPIU.html  validate.data.frame.html  vimp.Rforce.html  wcompo_est.html
man/: RC_ColsPermute.Rd  RC_Cummax.Rd  RC_MatrixAdd.Rd  RC_ReturnList.Rd  RC_Sum.Rd  Rforce.Rd  Y_hat_by_time.Rd  Y_hat_numerical_form.Rd  add_Y_hat.Rd  add_wrss.Rd  add_wt.Rd  admin_censoring.Rd  break_length_by_interval.Rd  compo_sim.Rd  compo_sim_mao.Rd  counts_by_interval_and_id.Rd  cpius_to_dummy.Rd  empirical_Y.Rd  km_fit.Rd  loadRforce.Rd  manual_censoring.Rd  observed_risk_time.Rd  patients_to_cpius.Rd  predict.Rforce.Rd  printTree.Rd  pseudo_risk_time.Rd  random_censoring.Rd  saveRforce.Rd  surv_sim.Rd  trueY.Rd  true_Y.Rd  true_Y_numerical_form.Rd  validate.CPIU.Rd  validate.data.frame.Rd  vimp.Rforce.Rd  wcompo_est.Rd
reference/: Rforce.html  Rforce.md  Y_hat_numerical_form.html  Y_hat_numerical_form.md  add_Y_hat.html  add_Y_hat.md  add_wrss.html  add_wrss.md  add_wt.html  add_wt.md  admin_censoring.html  admin_censoring.md  break_length_by_interval.html  break_length_by_interval.md  compo_sim.html  compo_sim.md  compo_sim_mao.html  compo_sim_mao.md  counts_by_interval_and_id.html  counts_by_interval_and_id.md  cpius_to_dummy.html  cpius_to_dummy.md  empirical_Y.html  empirical_Y.md  index.html  index.md  km_fit.html  km_fit.md  loadRforce.html  loadRforce.md  observed_risk_time.html  observed_risk_time.md  patients_to_cpius.html  patients_to_cpius.md  predict.Rforce.html  predict.Rforce.md  printTree.html  printTree.md  pseudo_risk_time.html  pseudo_risk_time.md  (+18 more)
src/: Makevars  convert.c  convert.h  dynamicSplit.c  dynamicSplit.h  forest.c  forest.h  gee.c  gee.h  init.c  main.c  pvalue.c  pvalue.h  rapi.c  split.c  split.h  surv.c  surv.h  tree.c  tree.h  utils.c  utils.h
tests/: CMakeLists.txt  test_utils.c  testthat.R
tests/testthat/: test-c-return-matrix.R  test-c-return-vector.R  test-compo-sim.R  test-cpiu.R  test-r-return-list.R  test-rforce.R
vignettes/: get-started.Rmd  introduction-to-Rforce.Rmd  references.bib
